# AdventOfCode21

./: CMakeLists.txt  main.cpp
